src/Performance_Consumer/ingress-controller/kafdrop.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafdrop-deployment
  labels:
    app: kafdrop
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafdrop
  template:
    metadata:
      labels:
        app: kafdrop
    spec:
      containers:
      - name: kafdrop
        image: obsidiandynamics/kafdrop:latest
        ports:
        - containerPort: 9000
---
apiVersion: v1
kind: Service
metadata:
  name: kafdrop-service
spec:
  selector:
    app: kafdrop
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9000
